# ntripcaster-fable-5-c

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  FEATURES.md  LICENSE  README.es.md  README.md  build-1.001.1.01.rar  build-1.001.1.04.rar  build-1.001.1.06.rar  build.sh  docker-compose.yml
build-1.001.1.06/: CMakeCache.txt  Makefile  cmake_install.cmake
build-1.001.1.06/src/: Makefile  ntripcaster
build-1.001.1.08/: CMakeCache.txt  Makefile  cmake_install.cmake
build-1.001.1.08/src/: Makefile  ntripcaster
build-1.001.1.09/: CMakeCache.txt  Makefile  cmake_install.cmake
build-1.001.1.09/src/: Makefile  ntripcaster
build-1.001.1.10/: CMakeCache.txt  Makefile  cmake_install.cmake
build-1.001.1.10/src/: Makefile  cmake_install.cmake  ntripcaster
build-1.001.1.11/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-1.001.1.11/src/: Makefile  ntripcaster
build-1.001.1.11/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-1.001.1.11/test/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ntrip_capture_compare  ntrip_rover_client  ntrip_source_relay
build-1.001.1.12/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-1.001.1.12/Testing/Temporary/: CTestCostData.txt
build-1.001.1.12/src/: Makefile  ntripcaster
build-1.001.1.12/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-1.001.1.12/test/tools/: CTestTestfile.cmake  Makefile  ntrip_capture_compare  ntrip_rover_client  ntrip_source_relay
capture_rtcm3_bin_UTC/: current_session.txt
conf/: ntripcaster.conf  ntripcaster.conf.example
docker/: README.md  entrypoint.sh
docs/: FEATURE_auth_registry.md  FEATURE_improvements_20260704_183128.md  FEATURE_improvements_FASE_A_20260704.md  FEATURE_registry_sqlite_dashboard.md  FEATURE_relay_capacity_reload.md  GUIA_GNSS_REAL.md
src/: CMakeLists.txt  main.c
src/core/: broker.c  broker.h  config.c  config.h  conn.h  io_engine.c  io_engine.h  logger.c  logger.h  mountpoint.c  mountpoint.h  ring_buffer.c  ring_buffer.h
src/gnss/: README.md  rtcm3.h  rtcm3_bits.h  rtcm3_decode.c  rtcm3_eph.c  rtcm3_eph.h  rtcm3_frame.c  rtcm3_frame.h  rtcm3_msm.c  rtcm3_msm.h  rtcm3_station.c  rtcm3_station.h
src/protocol/: auth.c  auth.h  html_template.c  html_template.h  ntrip.c  ntrip.h  ntrip_common.c  ntrip_common.h  ntrip_v1.c  ntrip_v1.h  ntrip_v2.c  ntrip_v2.h  pwhash.c  pwhash.h  sourcetable.c  sourcetable.h
templates/: sourcetable.html
test/: CMakeLists.txt
test/cases/: t_relay_rover_compare.sh
test/helpers/: common.sh  mk_rtcm.py
test/tools/: .gitignore  CMakeLists.txt  README.md  ntrip_capture_compare.c  ntrip_rover_client.c  ntrip_source_relay.c  ntrip_tool_common.c  ntrip_tool_common.h  ntrip_tools.conf.example
